add_library(parser
character.cpp
commandnode.cpp
double.cpp
format.cpp
grammar.yy
integer.cpp
parser.cpp
parser_lexer.cpp
parser_tree.cpp
program.cpp
returnvalue.cpp
scopenode.cpp
stepnode.cpp
tree.cpp
tree_opcheck.cpp
treenode.cpp
usercommandnode.cpp
variable.cpp
variablelist.cpp
variablenode.cpp
vector.cpp
vtypes.cpp
accessor.h
character.h
commandnode.h
double.h
integer.h
format.h
parser.h
program.h
returnvalue.h
scopenode.h
stepnode.h
tree.h
treenode.h
usercommandnode.h
variable.h
variablelist.h
variablenode.h
vector.h
vtypes.h
)

include_directories(
../
${QT_INCLUDE_DIR}
${CMAKE_SOURCE_DIR}
${CMAKE_BINARY_DIR}
${CMAKE_BINARY_DIR}/src
${CMAKE_SOURCE_DIR}/src/gui
)
